@@ -64,6 +64,9 @@ Print the full filename of the current working directory.\n\
 "), stdout);
       fputs (HELP_OPTION_DESCRIPTION, stdout);
       fputs (VERSION_OPTION_DESCRIPTION, stdout);
+      fputs (_("\n\
+If no option is specified, -L is assumed.\n\
+"), stdout);
       printf (USAGE_BUILTIN_WARNING, PROGRAM_NAME);
       emit_ancillary_info ();
     }
@@ -324,8 +327,8 @@ int
 main (int argc, char **argv)
 {
   char *wd;
-  /* POSIX requires a default of -L, but most scripts expect -P.  */
-  bool logical = (getenv ("POSIXLY_CORRECT") != NULL);
+  /* POSIX requires a default of -L.  */
+  bool logical = true;
 
   initialize_main (&argc, &argv);
   set_program_name (argv[0]);
